Faster multithreading algorithm complete